# test_repo

./: .bazelrc  MODULE.bazel  requirements.in  requirements_lock.txt
test_abc/: BUILD  main.py
test_wheel/: setup.py
tools/artifact_registry/: cred_helper.sh
